API uniformisation: switched to JSON for script info
