# script-server/src/main/kotlin/org/openapitools/server/models/InfoOutputs.kt
@@ -1,0 +1,28 @@
+/**
+* BON in a Box - Script service
+* No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: jean-michel.lord@mcgill.ca
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package org.openapitools.server.models
+
+
+/**
+ * 
+ * @param description 
+ * @param label 
+ * @param type 
+ * @param example 
+ */
+data class InfoOutputs(
+    val description: kotlin.String? = null,
+    val label: kotlin.String? = null,
+    val type: kotlin.String? = null,
+    val example: kotlin.String? = null
+) 
+
